--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ numpy
 easydict==1.9.0
 scikit-image==0.17.2
 scikit-learn==0.24.2
-opencv-python
+opencv-python-headless==4.1.2.30
 tensorflow
 joblib
 matplotlib
@@ -18,3 +18,6 @@ webdataset
 packaging
 scikit-learn==0.24.2
 wldhx.yadisk-direct
+albumentations==0.5.2
+pillow-avif-plugin
+Pillow
